[package]
name = "georust"
version = "0.1.0"
authors = ["Ramón Berrutti <ramonberrutti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "georust"
path = "src/main.rs"

[dependencies]
rocket = "0.4.4"
maxminddb = "0.13"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
